# imaginu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: EVALUATION.md
docs/site/: index.html
examples/: arcane_spire.json  archway_bridge.json  elder_sage.json  everdale.json  ravenspire.json  tavern.json  windmill.json
gallery/: arcane_spire.glb  archway_bridge.glb  bog_ooze.glb  building.glb  campfire.glb  cavern.glb  char_farmhand.glb  char_frost_knight.glb  char_hooded_wanderer.glb  char_mage.glb  char_rogue.glb  char_villager.glb  char_warrior.glb  crypt.glb  crystal.glb  lantern.glb  necrotic_lich.glb  ogre_brute.glb  regen.sh  regen_showcase.sh  rock.glb  rock_desert.glb  temple.glb  terrain_verdant.glb  terrain_volcanic.glb  tree_dead.glb  tree_oak.glb  tree_palm.glb  tree_pine.glb  void_horror.glb  volcanic_colossus.glb  windmill.glb
gallery/recipes/: barrel.json  bog_ooze.json  building.json  campfire.json  cave_spider.json  cavern.json  char_farmhand.json  char_frost_knight.json  char_hedge_mage.json  char_hooded_wanderer.json  char_mage.json  char_rogue.json  char_villager.json  char_warrior.json  crypt.json  crystal.json  fire_wyrm.json  frost_dragon_lord.json  fungal_broodmother.json  infernal_hydra.json  lantern.json  necrotic_lich.json  ogre_brute.json  rock.json  rock_desert.json  temple.json  terrain_archipelago.json  terrain_canyon.json  terrain_crater.json  terrain_island.json  terrain_mesa_strata.json  terrain_river_valley.json  terrain_verdant.json  terrain_volcanic.json  tree_dead.json  tree_oak.json  tree_palm.json  tree_pine.json  void_horror.json  volcanic_colossus.json
scripts/: determinism_baseline.sh
skill/: README.md
skill/imaginu/: SKILL.md
src/: anim.rs  csg.rs  error.rs  gltf.rs  lib.rs  main.rs  mesh.rs  noise.rs  palette.rs  recipe.rs  render.rs  sdf.rs  skinning.rs  subdiv.rs  texture.rs  uv.rs  validate.rs
src/generators/: building.rs  character.rs  crystal.rs  custom.rs  mod.rs  prop.rs  proportions.rs  rock.rs  terrain.rs  tree.rs
src/world/: chunk.rs  erosion.rs  manifest.rs  minimap.rs  mod.rs  model.rs  network.rs  overview.rs  poi.rs  zones.rs
(+35 files in other folders)
