[package]
name = "imaginu"
version = "0.1.0"
edition = "2024"
description = "AI-drivable procedural 3D asset compiler: JSON recipes -> beautiful game-ready GLB for Babylon.js"
license = "MIT"

[lib]
name = "imaginu"
path = "src/lib.rs"

[[bin]]
name = "imaginu"
path = "src/main.rs"

[dependencies]
glam = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
png = "0.17"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
opt-level = 3
lto = true
